added some html text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1> HEllo everyone</h1>
     <p>commit</p>
     <p>dfdkufgkfhdgkfdgfk</p>
-    
+    <p>Some changes</p>
         
     </body>
 </html>
